--- a/desafios/desafio.010/android.html
+++ b/desafios/desafio.010/android.html
@@ -15,8 +15,7 @@
     <nav>
         <a href="#">home</a>
         <a href="#">noticias</a>
-        <a href="#">curiosidades</a>
-        <a href="#">fale conosco</a>
+        <a href="#">contato</a>
     </nav> 
     <main>
         <article>
