--- a/exercicios/ex.022/fundo006.html
+++ b/exercicios/ex.022/fundo006.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>fundo fixo e tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+           /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            
+            /* shorthand */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: #fff;
-            width: 400px;
+            max-width: 600px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
@@ -27,6 +33,9 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus iure eveniet alias placeat exercitationem provident voluptatibus temporibus, minima nisi quam ducimus eum autem vel rem itaque, doloribus, non in.</p>
