--- a/exercicios/ex.022/fundo007.html
+++ b/exercicios/ex.022/fundo007.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alinhamento vertical</title>
     <style>
+        * {
+            margin: 0px;
+        }
         #container {
            background-image: url(imagens/target001.png);
            background-repeat: no-repeat;
