--- a/desafios/desafio.012/index.html
+++ b/desafios/desafio.012/index.html
@@ -27,7 +27,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -47,7 +47,7 @@
             Ou vai até no começo <br>
             Agora é .com <br>
             Se o saite é muito bom <br>
-            Ele vale um alto preço. <br>
+            Ele vale um alto preço. 
         </p>
         <p>
             Pra piorar a liguagem <br>
@@ -61,7 +61,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -81,7 +81,7 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            Da tecnologia do agora. 
         </p> 
         <p>   
             Felizmente, pra orar <br>
