--- a/exercicios/ex.024/iframe003.html
+++ b/exercicios/ex.024/iframe003.html
@@ -22,7 +22,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sequi tempora numquam nemo eos beatae nulla maiores facere placeat a libero ducimus impedit suscipit sapiente officia est reprehenderit, pariatur aspernatur.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sequi tempora numquam nemo eos beatae nulla maiores facere placeat a libero ducimus impedit suscipit sapiente officia est reprehenderit, pariatur aspernatur.</p>
-    <iframe srcdoc=" <h1>escolha uma das opcoes acima</h1>" frameborder="1" name="tela">
+    <iframe srcdoc=" <h1>escolha uma das opcoes acima</h1>" frameborder="1" name="tela" sandbox="sandbox" referrerpolicy="no-referrer ">
 
     </iframe>
 
