--- a/exercicios/ex.026/mq004/index.html
+++ b/exercicios/ex.026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    <h1></h1>
+     <main>
+        <h1>testando Media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="acessando via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="versão para impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="versão para desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="versão para tv">
+     </main>
 </body>
 </html>
